PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
12 Oct 2006, PHP 5.2.0RC6
- Fixed invalid read in imagecreatefrompng when an empty file is given
  (Pierre, Tony)
- Fixed bug #38458, PECL bug #8944, PECL bug #7775 (error retrieving
  columns after long/text columns with PDO_ODBC). (Wez)
- Fixed PECL bug #8816 (issue in php_oci_statement_fetch with more than one 
  piecewise column) (jeff at badtz-maru dot com, Tony)
- Fixed PECL bug #7755 (error selecting DOUBLE fields with PDO_ODBC).
  ("slaws", Wez)
- Fixed bug #39125 (Memleak when reflecting non-existing class/method). (Tony)
- Fixed bug #39067 (getDeclaringClass() and private properties). (Tony)
- Fixed bug #39034 (curl_exec() with return transfer returns TRUE on empty
  files). (Ilia)
- Fixed bug #38934 (move_uploaded_file() cannot read uploaded file outside of
  open_basedir). (Ilia)
- Fixed bug #38649 (uninit'd optional arg in stream_socket_sendto()). (Sara)
- Fixed bug #38198 (possible crash when COM reports an exception). (Ilia)
- Fixed bug #37262 (var_export() does not escape \0 character). (Ilia)
- Fixed bug #36515 (Unlinking buckets from non-existant brigades). (Sara)

05 Oct 2006, PHP 5.2.0RC5
- Updated bundled OpenSSL to version 0.9.8d in the Windows distro. (Edin)
- Updated Postgresql client libraries to 8.1.4 in the Windows distro. (Edin)
- Speedup array/HashTable copying. (Matt Wilmas, Dmitry)
- Added ability to make SOAP call userspace PHP<->XML converters. (Dmitry)
- Added support for character sets in pg_escape_string() for PostgreSQL
  8.1.4 and higher. (Ilia)
- Added support for character sets in PDO quote() method for PostgreSQL
  8.1.4 and higher. (Ilia)
- Fixed infinite loop when a wrong color index is given to imagefill (Pierre)
- Fixed mess with CGI/CLI -d option (now it works with cgi; constants are
  working exactly like in php.ini; with FastCGI -d affects all requests).